# ahp-freelancing-platforms

./: README.md
mba_project/: .env.exaple  docker-compose.yml  pyproject.toml
mba_project/mba_project/: data_collection_and_wrangler.py  jobs.csv  matching.py  mock_talents.csv
