[tool.poetry]
name = "mba_project"
version = "0.1.0"
description = ""
authors = ["Antonio Nascimento <ant.pnasc@gmail.com"]
readme = "README.md"

[tool.poetry.scripts]
exec = "mba_project.data_collection_and_wrangler:main"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
serpapi = "^0.1.5"
python-dotenv = "^1.0.1"
openai = "^1.43.0"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
faker = "^29.0.0"
matplotlib = "^3.9.2"
tabulate = "^0.9.0"
ahpy = "^2.0"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
